[tool.poetry]
name = "ontogram"
version = "0.1.1"
description = "Ontogram - an OWL ontology diagram generator."
authors = ["Edmond Chuc <edmond.chuc@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/edmondchuc/ontogram"
classifiers = [
    "Topic :: Utilities",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
rdflib = "^6.2.0"
click = "^8.1.3"
plantuml = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ontogram = "ontogram.cli:main"
